Closed Bug 93209 Opened 23 years ago Closed 23 years ago

should not discard the remainder of the packet after a 100 Continue response

Categories

(Core :: Networking: HTTP, defect, P1)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: v.a.a.g, Assigned: darin.moz)

References

()

Details

(Keywords: topembed, Whiteboard: r=bbaetz, sr=dougt, verified-on-trunk)

Attachments

(3 files)

Mozilla seems not to be able to render this site (and its links) properly, only
source code. None of the other browsers have problems with SpiderNet.
-> networking: http, and confirming, and updating summary.

Using testProtocols, I can see that we appear to be losing the response headers,
and most of the beginning of the response. The beginning of the data (when
sending an http/1.1 request) is:

HTTP/1.1 100 Continue

HTTP/1.1 200 OK
MIME-Version: 1.0
Server: TeleFinder/5.7.3
Date: Thu, 2 Aug 2001 10:11:45 GMT
Last-modified: Thu, 12 Jul 2001 11:18:13 GMT
Content-type: text/html
Accept-ranges: bytes
Content-Length: 6843

<data>...
I guess we're handling the 100 incorrectly. The server SHOULD NOT be sending
such a response to us, although its allowed to.

In fact, looking at it more, according to http logs, we're reading 1460 bytes in
the first ODA, seeing the 100 response, and throwing the rest of the input away.
Oops. We then get the rest of the data (from the middle of the page), think its
a 0.9 response, and things go downhill from there.

-> darin
Assignee: asa → darin
Status: UNCONFIRMED → NEW
Component: Browser-General → Networking: HTTP
Ever confirmed: true
OS: MacOS X → All
QA Contact: doronr → benc
Hardware: Macintosh → All
Summary: No rendering → should not discard the remainder of the packet after a 100 Continue response
Priority: -- → P1
Target Milestone: --- → mozilla0.9.4
bbaetz says: r=bbaetz
Status: NEW → ASSIGNED
Keywords: patch, topembed
Whiteboard: r=bbaetz, sr=?
The test before calling delete are not needed:

 if (mChunkedDecoder)
         delete mChunkedDecoder;
+
+    if (mResponseHead)
+        delete mResponseHead;


Is the |reset| assignment really needed:
+        PRBool reset = PR_FALSE;
+        mConnection->OnHeadersAvailable(this, &reset);


fix that and sr.


agreed.. the if()'s can be removed.  i'm initializing reset so i don't have to
worry if OnHeadersAvailable fails to set it.  new patch coming.
Whiteboard: r=bbaetz, sr=? → r=bbaetz, sr=dougt
fixed-on-trunk
Whiteboard: r=bbaetz, sr=dougt → r=bbaetz, sr=dougt, fixed-on-trunk
Target Milestone: mozilla0.9.4 → ---
verified on the trunk:

win NT4 2001080804
mac os9 2001080810
linux rh6 2001080810
QA Contact: benc → tever
Whiteboard: r=bbaetz, sr=dougt, fixed-on-trunk → r=bbaetz, sr=dougt, verified-on-trunk
fixed-on-branch
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: