Fixes bug 93209 "should not discard the remainder of the packet after a 100 Continue response" r=bbaetz, sr=dougt